name:                lordown
version:             0.1.1.0
synopsis:            LorCode writer for Pandoc
description:
        Convert Markdown ([CommonMark](https://commonmark.org)) to [Lorcode](https://www.linux.org.ru/help/lorcode.md) markup using [Pandoc](http://pandoc.org). Supports CommonMark with some additions:
        
        - headers of any level are converted to `[strong]text[/strong]`;
        - use SO mention/notify syntax `@maxcom` to produce `[user]maxcom[/user]`.
homepage:            http://github.com/smaximov/lordown#readme
license:             BSD3
license-file:        LICENSE
author:              Sergei Maximov
maintainer:          s.b.maximov@gmail.com
copyright:           Copyright: (c) present days Sergei Maximov
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Pandoc.Writers.Lorcode
                     , Text.Pandoc.Lordown
  build-depends:       base >= 4.7 && < 5
                     , pandoc
                     , pandoc-types
                     , containers
  default-language:    Haskell2010

executable lordown
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lordown
                     , pandoc
  default-language:    Haskell2010

test-suite lordown-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lordown
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/smaximov/lordown
